# Chat-with-your-own-document

./: README.md  llama_rag_with_colab_demo.ipynb  pyproject.toml
Chat-with-your-own-document/: app.py
llama_rag_postgresql_documentation/: .gitignore  llama_rag.py
