[tool.poetry]
name = "llama-rag-postgresql-documentation"
version = "0.1.0"
description = ""
authors = ["Madan Mohan Venkatesan <madanrokz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
unstructured = {extras = ["md"], version = "^0.15.13"}
llama-index-core = "^0.11.16"
llama-index = "^0.11.16"
llama-index-cli = "^0.3.1"
fastembed = "^0.3.6"
transformers = "^4.45.1"
sentence-transformers = "^3.1.1"
qdrant-client = "^1.11.3"
llama-index-agent-openai = "^0.3.4"
llama-index-legacy = "^0.9.48.post3"
llama-index-readers-file = "^0.2.2"
accelerate = "^0.34.2"
einops = "^0.8.0"
llama-index-vector-stores-qdrant = "^0.3.0"
llama-index-llms-huggingface = "^0.3.4"
llama-index-embeddings-fastembed = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
